--- a/wedding-fe/src/index.html
+++ b/wedding-fe/src/index.html
@@ -11,6 +11,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script async
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBw3DC5aYlm7X3c4ZM3wdGL3sqkjqV16nI">
+  </script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
